k8s-files/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: portal.manojreddy.ltd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms-fe-service
            port:
              number: 80
